--- a/core/genindex.html
+++ b/core/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; WebAssembly 3.0 (Draft 2024-06-12)</title>
+    <title>Index &#8212; WebAssembly 3.0 (Draft 2024-06-13)</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
@@ -436,6 +436,8 @@
         <li><a href="binary/modules.html#index-9">export</a>
 </li>
         <li><a href="binary/instructions.html#index-9">expression</a>
+</li>
+        <li><a href="binary/types.html#index-13">external type</a>
 </li>
         <li><a href="binary/modules.html#index-0">field index</a>
 </li>
@@ -895,10 +897,12 @@
       </ul></li>
       <li><a href="exec/runtime.html#index-1">external reference</a>, <a href="valid/instructions.html#index-6">[1]</a>
 </li>
-      <li><a href="syntax/types.html#index-17"><strong>external type</strong></a>, <a href="appendix/embedding.html#index-17">[1]</a>, <a href="appendix/properties.html#index-17">[2]</a>, <a href="exec/modules.html#index-9">[3]</a>, <a href="exec/values.html#index-2">[4]</a>, <a href="valid/matching.html#index-16">[5]</a>, <a href="valid/types.html#index-17">[6]</a>
+      <li><a href="syntax/types.html#index-17"><strong>external type</strong></a>, <a href="appendix/embedding.html#index-17">[1]</a>, <a href="appendix/properties.html#index-17">[2]</a>, <a href="binary/types.html#index-13">[3]</a>, <a href="exec/modules.html#index-9">[4]</a>, <a href="exec/values.html#index-2">[5]</a>, <a href="valid/matching.html#index-16">[6]</a>, <a href="valid/types.html#index-17">[7]</a>
 
       <ul>
         <li><a href="syntax/types.html#index-17">abstract syntax</a>
+</li>
+        <li><a href="binary/types.html#index-13">binary format</a>
 </li>
         <li><a href="valid/types.html#index-17">validation</a>
 </li>
