--- a/core/genindex.html
+++ b/core/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; WebAssembly 3.0 (Draft 2024-07-01)</title>
+    <title>Index &#8212; WebAssembly 3.0 (Draft 2024-07-03)</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css" />
     <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
@@ -365,6 +365,8 @@
 </li>
       <li><a href="exec/modules.html#index-0"><strong>allocation</strong></a>, <a href="appendix/embedding.html#index-1">[1]</a>, <a href="appendix/implementation.html#index-5">[2]</a>, <a href="exec/runtime.html#index-3">[3]</a>
 </li>
+      <li><a href="text/lexical.html#index-5"><strong>annotation</strong></a>, <a href="appendix/custom.html#index-0">[1]</a>
+</li>
       <li><a href="syntax/values.html#index-3">arithmetic NaN</a>
 </li>
       <li><a href="exec/runtime.html#index-1">array</a>, <a href="exec/values.html#index-1">[1]</a>
@@ -642,7 +644,9 @@
 </li>
       <li><a href="binary/instructions.html#index-1">control instructions</a>, <a href="exec/instructions.html#index-8">[1]</a>, <a href="text/instructions.html#index-2">[2]</a>, <a href="valid/instructions.html#index-11">[3]</a>
 </li>
-      <li><a href="binary/modules.html#index-2"><strong>custom section</strong></a>, <a href="appendix/custom.html#index-0">[1]</a>
+      <li><a href="appendix/custom.html#index-15"><strong>custom annotation</strong></a>
+</li>
+      <li><a href="binary/modules.html#index-2"><strong>custom section</strong></a>, <a href="appendix/custom.html#index-0">[1]</a>, <a href="appendix/custom.html#index-15">[2]</a>
 
       <ul>
         <li><a href="binary/modules.html#index-2">binary format</a>
@@ -919,7 +923,7 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="appendix/custom.html#index-7">field</a>, <a href="syntax/modules.html#index-1">[1]</a>
+      <li><a href="appendix/custom.html#index-14">field</a>, <a href="appendix/custom.html#index-7">[1]</a>, <a href="syntax/modules.html#index-1">[2]</a>
 
       <ul>
         <li><a href="syntax/modules.html#index-1">index</a>
@@ -977,7 +981,7 @@
         <li><a href="exec/runtime.html#index-15">abstract syntax</a>
 </li>
       </ul></li>
-      <li><a href="syntax/modules.html#index-3"><strong>function</strong></a>, <a href="appendix/changes.html#index-3">[1]</a>, <a href="appendix/changes.html#index-9">[2]</a>, <a href="appendix/custom.html#index-4">[3]</a>, <a href="appendix/custom.html#index-5">[4]</a>, <a href="appendix/embedding.html#index-11">[5]</a>, <a href="appendix/implementation.html#index-1">[6]</a>, <a href="appendix/implementation.html#index-2">[7]</a>, <a href="appendix/implementation.html#index-4">[8]</a>, <a href="binary/modules.html#index-12">[9]</a>, <a href="binary/modules.html#index-15">[10]</a>, <a href="binary/modules.html#index-5">[11]</a>, <a href="exec/instructions.html#index-10">[12]</a>, <a href="exec/modules.html#index-1">[13]</a>, <a href="exec/modules.html#index-11">[14]</a>, <a href="exec/modules.html#index-9">[15]</a>, <a href="exec/runtime.html#index-13">[16]</a>, <a href="exec/runtime.html#index-15">[17]</a>, <a href="exec/runtime.html#index-16">[18]</a>, <a href="exec/runtime.html#index-6">[19]</a>, <a href="exec/values.html#index-1">[20]</a>, <a href="intro/introduction.html#index-1">[21]</a>, <a href="intro/overview.html#index-0">[22]</a>, <a href="syntax/instructions.html#index-9">[23]</a>, <a href="syntax/modules.html#index-0">[24]</a>, <a href="syntax/modules.html#index-1">[25]</a>, <a href="syntax/modules.html#index-10">[26]</a>, <a href="syntax/modules.html#index-11">[27]</a>, <a href="syntax/modules.html#index-9">[28]</a>, <a href="syntax/types.html#index-4">[29]</a>, <a href="syntax/types.html#index-6">[30]</a>, <a href="syntax/types.html#index-7">[31]</a>, <a href="text/modules.html#index-22">[32]</a>, <a href="text/modules.html#index-3">[33]</a>, <a href="valid/conventions.html#index-7">[34]</a>, <a href="valid/modules.html#index-1">[35]</a>, <a href="valid/modules.html#index-11">[36]</a>
+      <li><a href="syntax/modules.html#index-3"><strong>function</strong></a>, <a href="appendix/changes.html#index-3">[1]</a>, <a href="appendix/changes.html#index-9">[2]</a>, <a href="appendix/custom.html#index-10">[3]</a>, <a href="appendix/custom.html#index-11">[4]</a>, <a href="appendix/custom.html#index-12">[5]</a>, <a href="appendix/custom.html#index-4">[6]</a>, <a href="appendix/custom.html#index-5">[7]</a>, <a href="appendix/embedding.html#index-11">[8]</a>, <a href="appendix/implementation.html#index-1">[9]</a>, <a href="appendix/implementation.html#index-2">[10]</a>, <a href="appendix/implementation.html#index-4">[11]</a>, <a href="binary/modules.html#index-12">[12]</a>, <a href="binary/modules.html#index-15">[13]</a>, <a href="binary/modules.html#index-5">[14]</a>, <a href="exec/instructions.html#index-10">[15]</a>, <a href="exec/modules.html#index-1">[16]</a>, <a href="exec/modules.html#index-11">[17]</a>, <a href="exec/modules.html#index-9">[18]</a>, <a href="exec/runtime.html#index-13">[19]</a>, <a href="exec/runtime.html#index-15">[20]</a>, <a href="exec/runtime.html#index-16">[21]</a>, <a href="exec/runtime.html#index-6">[22]</a>, <a href="exec/values.html#index-1">[23]</a>, <a href="intro/introduction.html#index-1">[24]</a>, <a href="intro/overview.html#index-0">[25]</a>, <a href="syntax/instructions.html#index-9">[26]</a>, <a href="syntax/modules.html#index-0">[27]</a>, <a href="syntax/modules.html#index-1">[28]</a>, <a href="syntax/modules.html#index-10">[29]</a>, <a href="syntax/modules.html#index-11">[30]</a>, <a href="syntax/modules.html#index-9">[31]</a>, <a href="syntax/types.html#index-4">[32]</a>, <a href="syntax/types.html#index-6">[33]</a>, <a href="syntax/types.html#index-7">[34]</a>, <a href="text/modules.html#index-22">[35]</a>, <a href="text/modules.html#index-3">[36]</a>, <a href="valid/conventions.html#index-7">[37]</a>, <a href="valid/modules.html#index-1">[38]</a>, <a href="valid/modules.html#index-11">[39]</a>
 
       <ul>
         <li><a href="syntax/modules.html#index-3">abstract syntax</a>, <a href="valid/modules.html#index-1">[1]</a>
@@ -1365,7 +1369,7 @@
       </ul></li>
       <li><a href="binary/values.html#index-3">little endian</a>, <a href="exec/numerics.html#index-5">[1]</a>, <a href="syntax/instructions.html#index-8">[2]</a>
 </li>
-      <li><a href="syntax/modules.html#index-3"><strong>local</strong></a>, <a href="appendix/changes.html#index-9">[1]</a>, <a href="appendix/custom.html#index-5">[2]</a>, <a href="appendix/implementation.html#index-1">[3]</a>, <a href="appendix/properties.html#index-22">[4]</a>, <a href="binary/modules.html#index-12">[5]</a>, <a href="exec/runtime.html#index-15">[6]</a>, <a href="syntax/instructions.html#index-6">[7]</a>, <a href="syntax/modules.html#index-1">[8]</a>, <a href="text/modules.html#index-3">[9]</a>, <a href="valid/conventions.html#index-5">[10]</a>, <a href="valid/conventions.html#index-6">[11]</a>, <a href="valid/modules.html#index-1">[12]</a>, <a href="valid/modules.html#index-2">[13]</a>
+      <li><a href="syntax/modules.html#index-3"><strong>local</strong></a>, <a href="appendix/changes.html#index-9">[1]</a>, <a href="appendix/custom.html#index-12">[2]</a>, <a href="appendix/custom.html#index-5">[3]</a>, <a href="appendix/implementation.html#index-1">[4]</a>, <a href="appendix/properties.html#index-22">[5]</a>, <a href="binary/modules.html#index-12">[6]</a>, <a href="exec/runtime.html#index-15">[7]</a>, <a href="syntax/instructions.html#index-6">[8]</a>, <a href="syntax/modules.html#index-1">[9]</a>, <a href="text/modules.html#index-3">[10]</a>, <a href="valid/conventions.html#index-5">[11]</a>, <a href="valid/conventions.html#index-6">[12]</a>, <a href="valid/modules.html#index-1">[13]</a>, <a href="valid/modules.html#index-2">[14]</a>
 
       <ul>
         <li><a href="syntax/modules.html#index-3">abstract syntax</a>
@@ -1477,7 +1481,7 @@
         <li><a href="valid/types.html#index-15">validation</a>
 </li>
       </ul></li>
-      <li><a href="syntax/modules.html#index-0"><strong>module</strong></a>, <a href="appendix/algorithm.html#index-0">[1]</a>, <a href="appendix/custom.html#index-3">[2]</a>, <a href="appendix/embedding.html#index-2">[3]</a>, <a href="appendix/embedding.html#index-9">[4]</a>, <a href="appendix/implementation.html#index-1">[5]</a>, <a href="appendix/implementation.html#index-2">[6]</a>, <a href="appendix/properties.html#index-39">[7]</a>, <a href="binary/conventions.html#index-0">[8]</a>, <a href="binary/modules.html#index-15">[9]</a>, <a href="exec/modules.html#index-10">[10]</a>, <a href="exec/modules.html#index-11">[11]</a>, <a href="exec/modules.html#index-9">[12]</a>, <a href="exec/runtime.html#index-3">[13]</a>, <a href="exec/runtime.html#index-6">[14]</a>, <a href="intro/introduction.html#index-1">[15]</a>, <a href="intro/overview.html#index-0">[16]</a>, <a href="text/modules.html#index-22">[17]</a>, <a href="valid/conventions.html#index-7">[18]</a>, <a href="valid/modules.html#index-11">[19]</a>
+      <li><a href="syntax/modules.html#index-0"><strong>module</strong></a>, <a href="appendix/algorithm.html#index-0">[1]</a>, <a href="appendix/custom.html#index-3">[2]</a>, <a href="appendix/custom.html#index-9">[3]</a>, <a href="appendix/embedding.html#index-2">[4]</a>, <a href="appendix/embedding.html#index-9">[5]</a>, <a href="appendix/implementation.html#index-1">[6]</a>, <a href="appendix/implementation.html#index-2">[7]</a>, <a href="appendix/properties.html#index-39">[8]</a>, <a href="binary/conventions.html#index-0">[9]</a>, <a href="binary/modules.html#index-15">[10]</a>, <a href="exec/modules.html#index-10">[11]</a>, <a href="exec/modules.html#index-11">[12]</a>, <a href="exec/modules.html#index-9">[13]</a>, <a href="exec/runtime.html#index-3">[14]</a>, <a href="exec/runtime.html#index-6">[15]</a>, <a href="intro/introduction.html#index-1">[16]</a>, <a href="intro/overview.html#index-0">[17]</a>, <a href="text/modules.html#index-22">[18]</a>, <a href="valid/conventions.html#index-7">[19]</a>, <a href="valid/modules.html#index-11">[20]</a>
 
       <ul>
         <li><a href="syntax/modules.html#index-0">abstract syntax</a>
@@ -1517,7 +1521,7 @@
 <h2 id="N">N</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="syntax/values.html#index-5"><strong>name</strong></a>, <a href="appendix/custom.html#index-1">[1]</a>, <a href="appendix/implementation.html#index-1">[2]</a>, <a href="appendix/properties.html#index-17">[3]</a>, <a href="binary/modules.html#index-4">[4]</a>, <a href="binary/modules.html#index-9">[5]</a>, <a href="binary/values.html#index-4">[6]</a>, <a href="exec/runtime.html#index-12">[7]</a>, <a href="exec/runtime.html#index-5">[8]</a>, <a href="intro/introduction.html#index-2">[9]</a>, <a href="syntax/modules.html#index-10">[10]</a>, <a href="syntax/modules.html#index-11">[11]</a>, <a href="text/modules.html#index-12">[12]</a>, <a href="text/modules.html#index-13">[13]</a>, <a href="text/modules.html#index-16">[14]</a>, <a href="text/modules.html#index-17">[15]</a>, <a href="text/modules.html#index-18">[16]</a>, <a href="text/modules.html#index-2">[17]</a>, <a href="text/modules.html#index-4">[18]</a>, <a href="text/modules.html#index-5">[19]</a>, <a href="text/modules.html#index-8">[20]</a>, <a href="text/modules.html#index-9">[21]</a>, <a href="text/values.html#index-4">[22]</a>, <a href="valid/modules.html#index-10">[23]</a>, <a href="valid/modules.html#index-9">[24]</a>
+      <li><a href="syntax/values.html#index-5"><strong>name</strong></a>, <a href="appendix/custom.html#index-1">[1]</a>, <a href="appendix/custom.html#index-8">[2]</a>, <a href="appendix/implementation.html#index-1">[3]</a>, <a href="appendix/properties.html#index-17">[4]</a>, <a href="binary/modules.html#index-4">[5]</a>, <a href="binary/modules.html#index-9">[6]</a>, <a href="binary/values.html#index-4">[7]</a>, <a href="exec/runtime.html#index-12">[8]</a>, <a href="exec/runtime.html#index-5">[9]</a>, <a href="intro/introduction.html#index-2">[10]</a>, <a href="syntax/modules.html#index-10">[11]</a>, <a href="syntax/modules.html#index-11">[12]</a>, <a href="text/modules.html#index-12">[13]</a>, <a href="text/modules.html#index-13">[14]</a>, <a href="text/modules.html#index-16">[15]</a>, <a href="text/modules.html#index-17">[16]</a>, <a href="text/modules.html#index-18">[17]</a>, <a href="text/modules.html#index-2">[18]</a>, <a href="text/modules.html#index-4">[19]</a>, <a href="text/modules.html#index-5">[20]</a>, <a href="text/modules.html#index-8">[21]</a>, <a href="text/modules.html#index-9">[22]</a>, <a href="text/values.html#index-4">[23]</a>, <a href="valid/modules.html#index-10">[24]</a>, <a href="valid/modules.html#index-9">[25]</a>
 
       <ul>
         <li><a href="syntax/values.html#index-5">abstract syntax</a>
@@ -1527,6 +1531,8 @@
         <li><a href="text/values.html#index-4">text format</a>
 </li>
       </ul></li>
+      <li><a href="appendix/custom.html#index-8"><strong>name annotation</strong></a>
+</li>
       <li><a href="appendix/custom.html#index-2"><strong>name map</strong></a>
 </li>
       <li><a href="appendix/custom.html#index-1"><strong>name section</strong></a>, <a href="text/modules.html#index-22">[1]</a>
@@ -1621,7 +1627,7 @@
       </ul></li>
       <li><a href="exec/runtime.html#index-8"><strong>page size</strong></a>, <a href="binary/types.html#index-10">[1]</a>, <a href="syntax/instructions.html#index-8">[2]</a>, <a href="syntax/modules.html#index-5">[3]</a>, <a href="syntax/types.html#index-12">[4]</a>, <a href="text/modules.html#index-14">[5]</a>, <a href="text/types.html#index-11">[6]</a>
 </li>
-      <li><a href="appendix/implementation.html#index-1">parameter</a>, <a href="syntax/modules.html#index-1">[1]</a>, <a href="syntax/types.html#index-7">[2]</a>
+      <li><a href="appendix/custom.html#index-11">parameter</a>, <a href="appendix/implementation.html#index-1">[1]</a>, <a href="syntax/modules.html#index-1">[2]</a>, <a href="syntax/types.html#index-7">[3]</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -1868,7 +1874,7 @@
         <li><a href="exec/runtime.html#index-14">abstract syntax</a>
 </li>
       </ul></li>
-      <li><a href="syntax/types.html#index-8"><strong>structure type</strong></a>, <a href="appendix/algorithm.html#index-1">[1]</a>, <a href="appendix/changes.html#index-10">[2]</a>, <a href="appendix/properties.html#index-5">[3]</a>, <a href="binary/types.html#index-7">[4]</a>, <a href="exec/runtime.html#index-14">[5]</a>, <a href="exec/values.html#index-1">[6]</a>, <a href="syntax/types.html#index-9">[7]</a>, <a href="text/types.html#index-7">[8]</a>, <a href="text/types.html#index-8">[9]</a>, <a href="valid/matching.html#index-3">[10]</a>, <a href="valid/matching.html#index-9">[11]</a>, <a href="valid/types.html#index-9">[12]</a>
+      <li><a href="syntax/types.html#index-8"><strong>structure type</strong></a>, <a href="appendix/algorithm.html#index-1">[1]</a>, <a href="appendix/changes.html#index-10">[2]</a>, <a href="appendix/custom.html#index-14">[3]</a>, <a href="appendix/properties.html#index-5">[4]</a>, <a href="binary/types.html#index-7">[5]</a>, <a href="exec/runtime.html#index-14">[6]</a>, <a href="exec/values.html#index-1">[7]</a>, <a href="syntax/types.html#index-9">[8]</a>, <a href="text/types.html#index-7">[9]</a>, <a href="text/types.html#index-8">[10]</a>, <a href="valid/matching.html#index-3">[11]</a>, <a href="valid/matching.html#index-9">[12]</a>, <a href="valid/types.html#index-9">[13]</a>
 
       <ul>
         <li><a href="syntax/types.html#index-8">abstract syntax</a>
@@ -1976,10 +1982,12 @@
       </ul></li>
       <li><a href="appendix/properties.html#index-39">terminal configuration</a>
 </li>
-      <li><a href="text/conventions.html#index-0"><strong>text format</strong></a>, <a href="appendix/embedding.html#index-4">[1]</a>, <a href="appendix/implementation.html#index-3">[2]</a>, <a href="intro/introduction.html#index-2">[3]</a>
+      <li><a href="text/conventions.html#index-0"><strong>text format</strong></a>, <a href="appendix/custom.html#index-0">[1]</a>, <a href="appendix/embedding.html#index-4">[2]</a>, <a href="appendix/implementation.html#index-3">[3]</a>, <a href="intro/introduction.html#index-2">[4]</a>
 
       <ul>
         <li><a href="text/types.html#index-7">aggregate type</a>
+</li>
+        <li><a href="text/lexical.html#index-5">annotation</a>
 </li>
         <li><a href="text/types.html#index-7">array type</a>
 </li>
@@ -2112,7 +2120,7 @@
 </li>
       <li><a href="binary/values.html#index-2">two&#39;s complement</a>, <a href="exec/numerics.html#index-7">[1]</a>, <a href="intro/overview.html#index-0">[2]</a>, <a href="syntax/instructions.html#index-2">[3]</a>, <a href="syntax/values.html#index-2">[4]</a>
 </li>
-      <li><a href="syntax/types.html#index-0"><strong>type</strong></a>, <a href="appendix/custom.html#index-6">[1]</a>, <a href="appendix/custom.html#index-7">[2]</a>, <a href="appendix/implementation.html#index-1">[3]</a>, <a href="appendix/index-rules.html#index-0">[4]</a>, <a href="appendix/index-types.html#index-0">[5]</a>, <a href="binary/types.html#index-0">[6]</a>, <a href="exec/modules.html#index-9">[7]</a>, <a href="exec/types.html#index-0">[8]</a>, <a href="text/types.html#index-0">[9]</a>, <a href="valid/modules.html#index-0">[10]</a>
+      <li><a href="syntax/types.html#index-0"><strong>type</strong></a>, <a href="appendix/custom.html#index-13">[1]</a>, <a href="appendix/custom.html#index-14">[2]</a>, <a href="appendix/custom.html#index-6">[3]</a>, <a href="appendix/custom.html#index-7">[4]</a>, <a href="appendix/implementation.html#index-1">[5]</a>, <a href="appendix/index-rules.html#index-0">[6]</a>, <a href="appendix/index-types.html#index-0">[7]</a>, <a href="binary/types.html#index-0">[8]</a>, <a href="exec/modules.html#index-9">[9]</a>, <a href="exec/types.html#index-0">[10]</a>, <a href="text/types.html#index-0">[11]</a>, <a href="valid/modules.html#index-0">[12]</a>
 
       <ul>
         <li><a href="syntax/types.html#index-0">abstract syntax</a>, <a href="valid/modules.html#index-0">[1]</a>
@@ -2212,7 +2220,7 @@
 </li>
       <li><a href="appendix/implementation.html#index-3">unicode</a>
 </li>
-      <li><a href="appendix/custom.html#index-1">Unicode UTF-8</a>
+      <li><a href="appendix/custom.html#index-1">Unicode UTF-8</a>, <a href="appendix/custom.html#index-8">[1]</a>
 </li>
       <li><a href="syntax/values.html#index-2"><strong>uninterpreted integer</strong></a>, <a href="binary/values.html#index-2">[1]</a>, <a href="exec/numerics.html#index-7">[2]</a>, <a href="text/values.html#index-1">[3]</a>
 
