deploy: bed26fd6cb79b434b5d6609d92086996acd1f6e9

--- a/core/valid/instructions.html
+++ b/core/valid/instructions.html
@@ -1163,9 +1163,8 @@ C \href{../valid/instructions.html#valid-instr}{\vdash} {{\mathit{sh}}_1{.}\href
 <div class="math notranslate nohighlight">
 \[\begin{array}{&#64;{}c&#64;{}}\displaystyle
 \frac{
-{{\href{../syntax/instructions.html#syntax-sx}{\mathit{sx}}}^?} = \epsilon \Leftrightarrow {\href{../syntax/instructions.html#aux-lanetype}{\mathrm{lanetype}}}({\mathit{sh}}_1) = {\mathit{imm}}_1 \land {\href{../syntax/instructions.html#aux-lanetype}{\mathrm{lanetype}}}({\mathit{sh}}_2) = {\mathit{imm}}_2 \land {|{\mathit{imm}}_1|} &gt; {|{\mathit{imm}}_2|} \lor {\href{../syntax/instructions.html#aux-lanetype}{\mathrm{lanetype}}}({\mathit{sh}}_1) = {{\mathsf{f}}{N}}_1 \land {\href{../syntax/instructions.html#aux-lanetype}{\mathrm{lanetype}}}({\mathit{sh}}_2) = {{\mathsf{f}}{N}}_2
 }{
-C \href{../valid/instructions.html#valid-instr}{\vdash} {\mathit{sh}}_1 {.} {{\mathit{vcvtop}}}{\mathsf{\_}}{{{\href{../syntax/instructions.html#syntax-sx}{\mathit{sx}}}^?}}{\mathsf{\_}}{{\mathit{sh}}_2}{\mathsf{\_}}{{{\mathit{hf}}^?}} : \href{../syntax/types.html#syntax-vectype}{\mathsf{v\scriptstyle128}} \rightarrow \href{../syntax/types.html#syntax-vectype}{\mathsf{v\scriptstyle128}}
+C \href{../valid/instructions.html#valid-instr}{\vdash} {\mathit{sh}}_1 {.} {{\mathit{vcvtop}}}{\mathsf{\_}}{{{\href{../syntax/instructions.html#syntax-sx}{\mathit{sx}}}^?}}{\mathsf{\_}}{{\mathit{sh}}_2}{\mathsf{\_}}{{{\mathit{half}}^?}} : \href{../syntax/types.html#syntax-vectype}{\mathsf{v\scriptstyle128}} \rightarrow \href{../syntax/types.html#syntax-vectype}{\mathsf{v\scriptstyle128}}
 }
 \qquad
 \end{array}\]</div>
