--- a/core/valid/types.html
+++ b/core/valid/types.html
@@ -248,7 +248,7 @@ C \href{../valid/types.html#valid-resulttype}{\vdash} {t_2^\ast} : \href{../vali
  \qquad
 (C{.}\href{../valid/conventions.html#context}{\mathsf{locals}}{}[x] = {{\mathit{lt}}})^\ast
 }{
-C \href{../valid/types.html#valid-instrtype}{\vdash} {t_1^\ast}~\mathrel{\href{../valid/conventions.html#syntax-instrtype}{\rightarrow}}~({x^\ast})~{t_2^\ast} : \href{../valid/types.html#valid-instrtype}{\mathsf{ok}}
+C \href{../valid/types.html#valid-instrtype}{\vdash} {t_1^\ast} \mathrel{\href{../valid/conventions.html#syntax-instrtype}{\rightarrow}}_{{x^\ast}} {t_2^\ast} : \href{../valid/types.html#valid-instrtype}{\mathsf{ok}}
 }
 \qquad
 \end{array}\]</div>
