--- a/core/syntax/conventions.html
+++ b/core/syntax/conventions.html
@@ -126,7 +126,7 @@ except that the <span class="math notranslate nohighlight">\(i\)</span>-th eleme
 except that the sub-sequence <span class="math notranslate nohighlight">\(s{}[i : n]\)</span> is replaced with <span class="math notranslate nohighlight">\({A^{n}}\)</span>.</p></li>
 <li><p><span class="math notranslate nohighlight">\(s_1 \oplus s_2\)</span> denotes the sequence <span class="math notranslate nohighlight">\(s_1\)</span> concatenated with <span class="math notranslate nohighlight">\(s_2\)</span>;
 this is equivalent to <span class="math notranslate nohighlight">\(s_1~s_2\)</span>, but sometimes used for clarity.</p></li>
-<li><p><span class="math notranslate nohighlight">\({ \bigoplus }\;{s^\ast}\)</span> denotes the flat sequence formed by concatenating all sequences <span class="math notranslate nohighlight">\(s_i\)</span> in <span class="math notranslate nohighlight">\({s^\ast}\)</span>.</p></li>
+<li><p><span class="math notranslate nohighlight">\({\bigoplus}\, {s^\ast}\)</span> denotes the flat sequence formed by concatenating all sequences <span class="math notranslate nohighlight">\(s_i\)</span> in <span class="math notranslate nohighlight">\({s^\ast}\)</span>.</p></li>
 </ul>
 <p>Moreover, the following conventions are employed:</p>
 <ul class="simple">
@@ -155,7 +155,7 @@ i.e, it is short for <span class="math notranslate nohighlight">\(r{}[{.}\mathsf
 <div class="math notranslate nohighlight">
 \[\{ {\mathsf{field}}_{1}\,{A_1^\ast}, {\mathsf{field}}_{2}\,{A_2^\ast}, \ldots \} \oplus \{ {\mathsf{field}}_{1}\,{B_1^\ast}, {\mathsf{field}}_{2}\,{B_2^\ast}, \ldots \} = \{ {\mathsf{field}}_{1}\,({A_1^\ast} \oplus {B_1^\ast}), {\mathsf{field}}_{2}\,({A_2^\ast} \oplus {B_2^\ast}), \ldots \}\]</div>
 </li>
-<li><p><span class="math notranslate nohighlight">\({ \bigoplus }\;{r^\ast}\)</span> denotes the composition of a sequence of records, respectively; if the sequence is empty, then all fields of the resulting record are empty.</p></li>
+<li><p><span class="math notranslate nohighlight">\({\bigoplus}\, {r^\ast}\)</span> denotes the composition of a sequence of records, respectively; if the sequence is empty, then all fields of the resulting record are empty.</p></li>
 </ul>
 <p>The update notation for sequences and records generalizes recursively to nested components accessed by “paths” <span class="math notranslate nohighlight">\(\begin{array}{&#64;{}l&#64;{}r&#64;{~}r&#64;{~}l&#64;{}l&#64;{}} &amp; {\mathit{pth}} &amp;::=&amp; {({}[ i ]~\mid~{.}\mathsf{field})^{+}} \\ \end{array}\)</span>:</p>
 <ul class="simple">
