deploy: e2d79d4078e4b25f6ffe8f1afbb11dd2bec63019

--- a/core/exec/runtime.html
+++ b/core/exec/runtime.html
@@ -131,7 +131,7 @@ For other references, no default value is defined, <span class="math notranslate
 {{\href{../exec/runtime.html#default-val}{\mathrm{default}}}}_{{\mathsf{i}}{N}} &amp; = &amp; ({\mathsf{i}}{N}{.}\href{../syntax/instructions.html#syntax-instr-numeric}{\mathsf{const}}~0) \\
 {{\href{../exec/runtime.html#default-val}{\mathrm{default}}}}_{{\mathsf{f}}{N}} &amp; = &amp; ({\mathsf{f}}{N}{.}\href{../syntax/instructions.html#syntax-instr-numeric}{\mathsf{const}}~{+0}) \\
 {{\href{../exec/runtime.html#default-val}{\mathrm{default}}}}_{{\mathsf{v}}{N}} &amp; = &amp; ({\mathsf{v}}{N}{.}\href{../syntax/instructions.html#syntax-instr-vec}{\mathsf{const}}~0) \\
-{{\href{../exec/runtime.html#default-val}{\mathrm{default}}}}_{\href{../syntax/types.html#syntax-reftype}{\mathsf{ref}}~\href{../syntax/types.html#syntax-reftype}{\mathsf{null}}~{\mathit{ht}}} &amp; = &amp; (\href{../syntax/instructions.html#syntax-instr-ref}{\mathsf{ref{.}null}}~{\mathit{ht}}) \\
+{{\href{../exec/runtime.html#default-val}{\mathrm{default}}}}_{\href{../syntax/types.html#syntax-reftype}{\mathsf{ref}}~\mathsf{null}~{\mathit{ht}}} &amp; = &amp; (\href{../syntax/instructions.html#syntax-instr-ref}{\mathsf{ref{.}null}}~{\mathit{ht}}) \\
 {{\href{../exec/runtime.html#default-val}{\mathrm{default}}}}_{\href{../syntax/types.html#syntax-reftype}{\mathsf{ref}}~{\mathit{ht}}} &amp; = &amp; \epsilon \\
 \end{array}\end{split}\]</div>
 <section id="convention">
