--- a/core/valid/matching.html
+++ b/core/valid/matching.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Matching &#8212; WebAssembly 3.0 (Draft 2025-01-23)</title>
+    <title>Matching &#8212; WebAssembly 3.0 (Draft 2025-01-24)</title>
     <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=03e43079" />
     <link rel="stylesheet" type="text/css" href="../_static/basic.css?v=686e5160" />
     <link rel="stylesheet" type="text/css" href="../_static/alabaster.css?v=057308f9" />
-    <script src="../_static/documentation_options.js?v=0a49ec4e"></script>
+    <script src="../_static/documentation_options.js?v=84121d80"></script>
     <script src="../_static/doctools.js?v=9bcbadda"></script>
     <script src="../_static/sphinx_highlight.js?v=dc90522c"></script>
     <script>window.MathJax = {"tex": {"maxBuffer": 30720, "macros": {"multicolumn": ["", 2]}}}</script>
@@ -495,7 +495,7 @@ C \href{../valid/matching.html#match-valtype}{\vdash} \href{../valid/conventions
 <p>The value type sequence <span class="math notranslate nohighlight">\({t_1^\ast}\)</span> matches the value type sequence <span class="math notranslate nohighlight">\({t_2^\ast}\)</span> if:</p>
 <blockquote>
 <div><ul>
-<li><p><span class="math notranslate nohighlight">\({|t_{\mathit{{\scriptstyle 2}*}}|}\)</span> is equal to <span class="math notranslate nohighlight">\({|t_{\mathit{{\scriptstyle 1}*}}|}\)</span>.</p></li>
+<li><p><span class="math notranslate nohighlight">\({|{t_1^\ast}|}\)</span> is equal to <span class="math notranslate nohighlight">\({|{t_2^\ast}|}\)</span>.</p></li>
 <li><p>For all <span class="math notranslate nohighlight">\(t_1\)</span> in <span class="math notranslate nohighlight">\({t_1^\ast}\)</span> and <span class="math notranslate nohighlight">\(t_2\)</span> in <span class="math notranslate nohighlight">\({t_2^\ast}\)</span>:</p>
 <blockquote>
 <div><ul class="simple">
@@ -524,7 +524,7 @@ C \href{../valid/matching.html#match-resulttype}{\vdash} {t_1^\ast} \href{../val
 <li><p>The value type sequence <span class="math notranslate nohighlight">\({t_{21}^\ast}\)</span> matches the value type sequence <span class="math notranslate nohighlight">\({t_{11}^\ast}\)</span>.</p></li>
 <li><p>The value type sequence <span class="math notranslate nohighlight">\({t_{12}^\ast}\)</span> matches the value type sequence <span class="math notranslate nohighlight">\({t_{22}^\ast}\)</span>.</p></li>
 <li><p>The local index sequence <span class="math notranslate nohighlight">\({x^\ast}\)</span> is equal to <span class="math notranslate nohighlight">\({x_2^\ast} \setminus {x_1^\ast}\)</span>.</p></li>
-<li><p><span class="math notranslate nohighlight">\({|{\mathit{x*}}|}\)</span> is equal to <span class="math notranslate nohighlight">\({|{\mathit{t*}}|}\)</span>.</p></li>
+<li><p><span class="math notranslate nohighlight">\({|{t^\ast}|}\)</span> is equal to <span class="math notranslate nohighlight">\({|{x^\ast}|}\)</span>.</p></li>
 <li><p>For all <span class="math notranslate nohighlight">\(x\)</span> in <span class="math notranslate nohighlight">\({x^\ast}\)</span>:</p>
 <blockquote>
 <div><ul class="simple">
@@ -594,7 +594,7 @@ C \href{../valid/matching.html#match-functype}{\vdash} {t_{11}^\ast} \href{../sy
 <div><ul>
 <li><p>The composite type <span class="math notranslate nohighlight">\({\mathit{ct}}_{\mathit{u{\kern-0.1em\scriptstyle 1}}}\)</span> is equal to <span class="math notranslate nohighlight">\((\href{../syntax/types.html#syntax-comptype}{\mathsf{struct}}~{{\mathit{yt}}_1^\ast}~{\mathit{yt}'}_1)\)</span>.</p></li>
 <li><p>The composite type <span class="math notranslate nohighlight">\({\mathit{ct}}_{\mathit{u{\kern-0.1em\scriptstyle 2}}}\)</span> is equal to <span class="math notranslate nohighlight">\((\href{../syntax/types.html#syntax-comptype}{\mathsf{struct}}~{{\mathit{yt}}_2^\ast})\)</span>.</p></li>
-<li><p><span class="math notranslate nohighlight">\({|{\mathit{yt}}_{\mathit{{\scriptstyle 2}*}}|}\)</span> is equal to <span class="math notranslate nohighlight">\({|{\mathit{yt}}_{\mathit{{\scriptstyle 1}*}}|}\)</span>.</p></li>
+<li><p><span class="math notranslate nohighlight">\({|{{\mathit{yt}}_1^\ast}|}\)</span> is equal to <span class="math notranslate nohighlight">\({|{{\mathit{yt}}_2^\ast}|}\)</span>.</p></li>
 <li><p>For all <span class="math notranslate nohighlight">\({\mathit{yt}}_1\)</span> in <span class="math notranslate nohighlight">\({{\mathit{yt}}_1^\ast}\)</span> and <span class="math notranslate nohighlight">\({\mathit{yt}}_2\)</span> in <span class="math notranslate nohighlight">\({{\mathit{yt}}_2^\ast}\)</span>:</p>
 <blockquote>
 <div><ul class="simple">
