--- a/core/valid/types.html
+++ b/core/valid/types.html
@@ -439,6 +439,15 @@ C \href{../valid/types.html#valid-packtype}{\vdash} {\href{../syntax/types.html#
 </ul>
 </div></blockquote>
 </li>
+<li><p>Or:</p>
+<blockquote>
+<div><ul class="simple">
+<li><p>The sub type sequence <span class="math notranslate nohighlight">\({{\mathit{st}}_{\mathit{u{\kern-0.1em\scriptstyle 1}}}^\ast}\)</span> is equal to <span class="math notranslate nohighlight">\({{\href{../syntax/types.html#syntax-subtype}{\mathit{subtype}}}^\ast}\)</span>.</p></li>
+<li><p>Let <span class="math notranslate nohighlight">\({C'}\)</span> be the same context as <span class="math notranslate nohighlight">\(C\)</span>, but with the sub type sequence <span class="math notranslate nohighlight">\({{\href{../syntax/types.html#syntax-subtype}{\mathit{subtype}}}^\ast}\)</span> prepended to the field <span class="math notranslate nohighlight">\(\href{../appendix/properties.html#context-ext}{\mathsf{recs}}\)</span>.</p></li>
+<li><p>Under the context <span class="math notranslate nohighlight">\({C'}\)</span>, the recursive type <span class="math notranslate nohighlight">\((\href{../syntax/types.html#syntax-rectype}{\mathsf{rec}}~{{\href{../syntax/types.html#syntax-subtype}{\mathit{subtype}}}^\ast})\)</span> is valid with <span class="math notranslate nohighlight">\(({\href{../valid/types.html#valid-subtype}{\mathsf{ok}}}{(x, 0)})\)</span>.</p></li>
+</ul>
+</div></blockquote>
+</li>
 </ul>
 </div></blockquote>
 <div class="admonition-todo admonition" id="id2">
