deploy: 6067dbd52be14ea7828c9bdec9c4e007d66953b6

--- a/core/syntax/values.html
+++ b/core/syntax/values.html
@@ -109,7 +109,7 @@ In the abstract syntax they are represented as hexadecimal literals.</p>
 <div class="math notranslate nohighlight">
 \[\begin{split}\begin{array}[t]{&#64;{}l&#64;{}rrl&#64;{}l&#64;{}}
 &amp; {{\href{../syntax/values.html#syntax-int}{\mathit{u}\kern-0.1em}}}{N} &amp; ::= &amp; 0 ~|~ \ldots ~|~ {2^{N}} - 1 \\
-&amp; {{\href{../syntax/values.html#syntax-int}{\mathit{s}\kern-0.1em}}}{N} &amp; ::= &amp; {-{2^{N - 1}}} ~|~ \ldots ~|~ {-1} ~|~ 0 ~|~ {+1} ~|~ \ldots ~|~ {2^{N - 1}} - 1 \\
+&amp; {{\href{../syntax/values.html#syntax-int}{\mathit{s}\kern-0.1em}}}{N} &amp; ::= &amp; {-{2^{N - 1}}} ~|~ \ldots ~|~ {-1} ~|~ 0 ~|~ {+1} ~|~ \ldots ~|~ {+{2^{N - 1}}} - 1 \\
 &amp; {{\href{../syntax/values.html#syntax-int}{\mathit{i}\kern-0.1em}}}{N} &amp; ::= &amp; {{\href{../syntax/values.html#syntax-int}{\mathit{u}\kern-0.1em}}}{N} \\
 \end{array}\end{split}\]</div>
 <p>The class <span class="math notranslate nohighlight">\({\href{../syntax/values.html#syntax-int}{\mathit{i}\kern-0.1em}}\)</span> defines <em>uninterpreted</em> integers, whose signedness interpretation can vary depending on context.
